--- a/src/translations/locales/vi.json
+++ b/src/translations/locales/vi.json
@@ -2582,5 +2582,6 @@
   "program.label.audioFile": "Tập tin âm thanh",
   "program.DisplayModeSelector.audioTrial": "dùng thử âm thanh",
   "program.DisplayModeSelector.loginToAudioTrial": "Đăng nhập để dùng thử âm thanh",
-  "program.DisplayModeSelector.payToListen": "trả tiền để nghe"
+  "program.DisplayModeSelector.payToListen": "trả tiền để nghe",
+  "sale.OrderExportModal.shippingFee": "Phí vận chuyển"
 }
