--- a/src/translations/locales/vi.json
+++ b/src/translations/locales/vi.json
@@ -878,6 +878,7 @@
   "common.ui.detail": "Chi tiết",
   "common.ui.discontinue": "下架",
   "common.ui.download": " Tải xuống ",
+  "common.ui.downloading": "下載中",
   "common.ui.downloadMemberList": " Danh sách Tải xuống ",
   "common.ui.duplicate": "Nhân bản",
   "common.ui.edit": "Chỉnh sửa",
