--- a/src/translations/locales/id.json
+++ b/src/translations/locales/id.json
@@ -878,6 +878,7 @@
   "common.ui.detail": "Detail",
   "common.ui.discontinue": "下架",
   "common.ui.download": "Unduh",
+  "common.ui.downloading": "下載中",
   "common.ui.downloadMemberList": "Daftar Unduhan",
   "common.ui.duplicate": "Duplikat",
   "common.ui.edit": "Sunting",
