--- a/src/translations/locales/zh-cn.json
+++ b/src/translations/locales/zh-cn.json
@@ -878,6 +878,7 @@
   "common.ui.detail": "详情",
   "common.ui.discontinue": "下架",
   "common.ui.download": "下载",
+  "common.ui.downloading": "下载中",
   "common.ui.downloadMemberList": "下载名单",
   "common.ui.duplicate": "复制",
   "common.ui.edit": "编辑",
