--- a/src/translations/locales/zh-cn.json
+++ b/src/translations/locales/zh-cn.json
@@ -2270,11 +2270,13 @@
   "project.ProjectPublishAdminBlock.publishedPortfolioNotation": "Your portfolio is published now, it will show in page.",
   "project.ProjectPublishAdminBlock.unpublishedNotation": "Your project is not published, it will not show in page.",
   "project.ProjectPublishAdminBlock.unpublishedPortfolioNotation": "Your portfolio is not published, it will not show in page.",
+  "project.ProjectRejectMarkModal.agreeSuccessfully": "成功同意标记",
   "project.ProjectRejectMarkModal.hasRejectedMark": "Has rejected mark",
   "project.ProjectRejectMarkModal.invalidEmail": "無效的信箱",
   "project.ProjectRejectMarkModal.pleaseEnterAReasonForRejection": "Please enter a reason for rejection",
   "project.ProjectRejectMarkModal.reason": "Reason",
   "project.ProjectRejectMarkModal.rejectMark": "Reject Mark",
+  "project.ProjectRejectMarkModal.rejectSuccessfully": "成功拒绝标记",
   "project.text.noSalePlan": "尚未订定募资条件",
   "project.text.noSalePrice": "Sale price has not been set",
   "promotion.*.isRequired": "請輸入{field}",
