fix: modify ProjectAdminPage for portfolio project

--- a/src/translations/locales/zh-tw.json
+++ b/src/translations/locales/zh-tw.json
@@ -377,10 +377,10 @@
   "blog.label.pinnedAtUpdate": "設定置頂",
   "blog.label.postContent": "文章內容",
   "blog.label.postManagement": "文章管理",
+  "blog.label.publishedAt": "發布日期",
   "blog.label.source": "說明備註",
   "blog.label.title": "標題",
   "blog.label.views": "瀏覽數量",
-  "blog.publicAt": "發布日期",
   "blog.status.notCompleteNotation": "你的文章未發佈，此文章並不會顯示在頁面上。",
   "blog.status.publishedNotation": "現在你的文章已發佈，此文章會出現在頁面上。",
   "blog.status.unpublishedNotation": "現在你的文章已發佈，此文章會出現在頁面上。",
@@ -388,7 +388,7 @@
   "blog.text.noVideoFound": "找不到影片",
   "blog.text.pasteVideoUrl": "貼上影片網址",
   "blog.text.suggestedPictureSize": "建議圖片尺寸：1200*675px",
-  "blog.text.uploadPinnedAtLimmited": "置頂上限為三則",
+  "blog.text.uploadPinnedAtLimited": "置頂上限為三則",
   "blog.text.uploading": "上傳中",
   "blog.text.url": "完整網址的最後部分，通常是因由小寫英文字母、數字或連字號組成",
   "blog.ui.createPost": "建立文章",
@@ -829,6 +829,7 @@
   "common.text.enterRegisteredEmail": "輸入你註冊的信箱",
   "common.text.forgotPassword": "忘記密碼？",
   "common.text.locale": "當前台為指定語系時才會顯示，若不選擇全語系皆顯示",
+  "common.text.memberEditable": "會員可編輯",
   "common.text.minutes": "{minutes} 分鐘",
   "common.text.noAssignedInstructor": "尚未指定講師",
   "common.text.ogImageTips": "建議圖片尺寸：1200*630px",
@@ -852,6 +853,7 @@
   "common.ui.addProperty": "新增欄位",
   "common.ui.addToCart": "加入購物車",
   "common.ui.agree": "同意",
+  "common.ui.audio": "audio",
   "common.ui.back": "返回",
   "common.ui.backToHomepage": "回首頁",
   "common.ui.backstage": "管理後台",
@@ -1096,6 +1098,7 @@
   "craft.ParagraphSettings.paragraphContent": "段落內容",
   "craft.PositionStyleInput.none": "無框線",
   "craft.PositionStyleInput.solid": "實線",
+  "craft.PostCollectionSettings.postSectionId": "文章區塊 ID",
   "craft.ProgramCollectionSettings.programSectionId": "課程區塊 ID",
   "craft.ProgramContentCollectionSettings.programContentSectionId": "課程內容區塊 ID",
   "craft.ProgramPackageCollectionSettings.programPackageSectionId": "課程組合區塊 ID",
@@ -1940,6 +1943,14 @@
   "podcastAlbum.ui.createPodcastAlbum": "建立專輯",
   "podcastAlbum.ui.deletePodcastAlbum": "刪除專輯",
   "podcastAlbum.ui.sortPodcastProgram": "排序音頻",
+  "post.PostCollectionSelector.addItem": "新增項目",
+  "post.PostCollectionSelector.byPopularity": "依熱門程度",
+  "post.PostCollectionSelector.choiceData": "選擇資料",
+  "post.PostCollectionSelector.currentPrice": "依產品價錢",
+  "post.PostCollectionSelector.newest": "自訂項目",
+  "post.PostCollectionSelector.publishedAt": "依上架日期",
+  "post.PostCollectionSelector.recentWatched": "依最後觀看時間",
+  "post.PostCollectionSelector.ruleOfSort": "預設排序",
   "practice.text.emptyPractice": "尚未有任何作業",
   "practice.text.searchPractice": "搜尋標題或學員名稱",
   "program.*.cancel": "取消",
@@ -1951,8 +1962,11 @@
   "program.*.notifyUpdate": "通知內容更新",
   "program.*.save": "儲存",
   "program.*.successfullySaved": "儲存成功",
+  "program.DisplayModeSelector.audioTrial": "試聽",
   "program.DisplayModeSelector.conceal": "隱藏",
+  "program.DisplayModeSelector.loginToAudioTrial": "登入試聽",
   "program.DisplayModeSelector.loginToTrial": "登入試看",
+  "program.DisplayModeSelector.payToListen": "付費聽",
   "program.DisplayModeSelector.payToWatch": "付費觀看",
   "program.DisplayModeSelector.trial": "試看",
   "program.ExamBasicForm.bought": "購買後",
@@ -1998,6 +2012,7 @@
   "program.ProgramCollectionSelector.sortDesc": "倒序",
   "program.ProgramContentAdminItem.privatePractice": "私密作業",
   "program.ProgramContentSectionAdminCard.articleContent": "圖文內容",
+  "program.ProgramContentSectionAdminCard.audioContent": "音頻內容",
   "program.ProgramContentSectionAdminCard.createContent": "新增內容",
   "program.ProgramContentSectionAdminCard.deleteSection": "刪除區塊",
   "program.ProgramContentSectionAdminCard.deleteSectionWarning": "此區塊內的所有內容將被刪除，此動作無法還原",
@@ -2024,6 +2039,7 @@
   "program.label.allProgram": "全部課程",
   "program.label.allowMultipleAnswers": "允許多個正確解答",
   "program.label.answerDescription": "解答說明",
+  "program.label.audioFile": "音頻",
   "program.label.availableForPastContent": "可看過去內容",
   "program.label.choice": "選項",
   "program.label.chooseCaptionLanguage": "選擇字幕語系",
@@ -2078,6 +2094,8 @@
   "program.status.unreviewed": "未點評",
   "program.text. searchExerciseMember": "搜尋學員姓名或 Email",
   "program.text.acceptedStudents": "通過人數 {count} 人 ({percent}%)",
+  "program.text.audioFileLimit": "檔案大小超過250MB，請重新選擇檔案上傳",
+  "program.text.audioFileTips": "建議格式：MP3\n檔案大小限制：250MB",
   "program.text.averageScore": "平均成績 {averageScore} 分",
   "program.text.coverRequiredTips": "若作業形式以文件為主，建議不勾選",
   "program.text.deleteChoiceDescription": "選項刪除即不可恢復，確定要刪除嗎？",
@@ -2113,6 +2131,7 @@
   "program.text.uploadVideo": "上傳影片",
   "program.text.videoPlaceholder": "貼上影片網址",
   "program.ui.articleContent": "圖文內容",
+  "program.ui.audioContent": "音頻內容",
   "program.ui.checkProgramContent": "查看課程內容",
   "program.ui.chooseFile": "選擇檔案",
   "program.ui.createExerciseChoice": "新增選項",
@@ -2130,6 +2149,7 @@
   "program.ui.reUpload": "重新上傳",
   "program.ui.sortContents": "排序內容",
   "program.ui.sortProgram": "課程排序",
+  "program.ui.uploadAudioFile": "上傳音頻",
   "program.ui.uploadCaption": "上傳字幕",
   "program.ui.uploadCaptions": "上傳字幕",
   "program.ui.uploadExample": "範例素材",
@@ -2192,8 +2212,10 @@
   "project.ProgramPackageBasicFrom.notUploaded": "*尚未上傳",
   "project.ProgramPackageBasicFrom.showOriginSize": "以原圖尺寸顯示",
   "project.ProjectAdminPage.deletePortfolio": "刪除作品",
+  "project.ProjectAdminPage.portfolioAuthorNotice": "請設定此作品的製作單位(製作公司/個人創作者)，若沒有找到該製作單位的帳號，建議先填寫自己的帳號即可。",
   "project.ProjectAdminPage.portfolioContent": "作品內容",
   "project.ProjectAdminPage.portfolioDescription": "作品描述",
+  "project.ProjectAdminPage.portfolioDescriptionNotice": "為保障創作者智慧財產權，建議在此欄位說明作品的製作團隊、擁有作品版權者、客戶、代理商。",
   "project.ProjectAdminPage.portfolioManagement": "作品管理",
   "project.ProjectAdminPage.portfolioSettings": "作品設定",
   "project.ProjectAdminPage.projectIntroduction": "專案介紹",
@@ -2476,6 +2498,7 @@
   "sale.OrderExportModal.send": "寄送",
   "sale.OrderExportModal.sharingCode": "推廣網址",
   "sale.OrderExportModal.sharingNote": "推廣備註",
+  "sale.OrderExportModal.shippingFee": "運費",
   "sale.OrderExportModal.specify": "指定產品",
   "sale.OrderExportModal.specifyCouponPlan": "指定折價方案",
   "sale.OrderExportModal.specifyVoucherPlan": "指定兌換方案",
@@ -2577,15 +2600,5 @@
   "voucher.status.redeemable": "可兌換",
   "voucher.text.fromNow": "即日起",
   "voucher.text.items": "個項目",
-  "voucher.text.noUsePeriod": "無使用期限",
-  "program.ProgramContentSectionAdminCard.audioContent": "音頻內容",
-  "program.ui.audioContent": "音頻內容",
-  "program.ui.uploadAudioFile": "上傳音頻",
-  "program.text.audioFileLimit": "檔案大小超過250MB，請重新選擇檔案上傳",
-  "program.text.audioFileTips": "建議格式：MP3\n檔案大小限制：250MB",
-  "program.label.audioFile": "音頻",
-  "program.DisplayModeSelector.audioTrial": "試聽",
-  "program.DisplayModeSelector.loginToAudioTrial": "登入試聽",
-  "program.DisplayModeSelector.payToListen": "付費聽",
-  "sale.OrderExportModal.shippingFee": "運費"
+  "voucher.text.noUsePeriod": "無使用期限"
 }
