--- a/src/translations/locales/vi.json
+++ b/src/translations/locales/vi.json
@@ -1522,6 +1522,7 @@
   "member.label.task": " Danh sách việc cần làm ",
   "member.label.taskDescription": " Nội dung ",
   "member.label.taskTitle": " Tiêu đề ",
+  "member.label.timetable": "時間表",
   "member.label.線上課程服務約款": "Hợp đồng dịch vụ khóa học trực tuyến",
   "member.text.markAsRejection": " Đánh dấu là từ chối ",
   "member.text.removeMember": " Trạng thái của sinh viên sẽ được thay đổi thành Bị Từ chối và bị xóa khỏi danh sách\" Đang phát triển \". ",
@@ -1885,7 +1886,6 @@
   "page.VoucherPlanCollectionBlock.fetchDataError": "讀取錯誤",
   "page.VoucherPlanCollectionBlock.showMore": "顯示更多",
   "page.salesLeadDeliveryPage.adMaterials": "廣告素材",
-  "page.salesLeadDeliveryPage.assignedAtRange": "名單派發日期",
   "page.salesLeadDeliveryPage.createdAtRange": "名單建立日期",
   "page.salesLeadDeliveryPage.deliverAgain": "再次派發",
   "page.salesLeadDeliveryPage.deliverFailed": "名單派發失敗",
@@ -1899,6 +1899,7 @@
   "page.salesLeadDeliveryPage.expectedDeliveryAmount": "預計派發名單數",
   "page.salesLeadDeliveryPage.field": "領域",
   "page.salesLeadDeliveryPage.filterSalesLead": "篩選名單",
+  "page.salesLeadDeliveryPage.lastContactRange": "上次接通日期",
   "page.salesLeadDeliveryPage.leadLevel": "名單分級",
   "page.salesLeadDeliveryPage.marketingActivity": "行銷活動",
   "page.salesLeadDeliveryPage.nextStep": "下一步",
