--- a/src/translations/locales/zh-tw.json
+++ b/src/translations/locales/zh-tw.json
@@ -1363,6 +1363,8 @@
   "form.PermissionGroup.MEMBER_EMAIL_EDIT": "編輯信箱",
   "form.PermissionGroup.MEMBER_MANAGER_ADMIN": "指派承辦人功能",
   "form.PermissionGroup.MEMBER_PHONE_ADMIN": "檢視電話欄位",
+  "form.PermissionGroup.MEMBER_PROGRAM_TIMETABLE_EDIT": "編輯會員課表",
+  "form.PermissionGroup.MEMBER_PROGRAM_TIMETABLE_VIEW": "查看會員課表",
   "form.PermissionGroup.MEMBER_PROPERTY_ADMIN": "所有自訂欄位功能",
   "form.PermissionGroup.MEMBER_STAR_ADMIN": "檢視星等欄位",
   "form.PermissionGroup.MEMBER_USERNAME_EDIT": "編輯帳號",
@@ -1526,6 +1528,7 @@
   "member.label.task": "待辦清單",
   "member.label.taskDescription": "內容",
   "member.label.taskTitle": "標題",
+  "member.label.timetable": "時間表",
   "member.label.線上課程服務約款": "線上課程服務約款",
   "member.text.markAsRejection": "標註為拒絕",
   "member.text.removeMember": "學員狀態將改為已拒絕，並從「開發中」的名單內抽離。",
@@ -1889,7 +1892,6 @@
   "page.VoucherPlanCollectionBlock.fetchDataError": "讀取錯誤",
   "page.VoucherPlanCollectionBlock.showMore": "顯示更多",
   "page.salesLeadDeliveryPage.adMaterials": "廣告素材",
-  "page.salesLeadDeliveryPage.assignedAtRange": "名單派發日期",
   "page.salesLeadDeliveryPage.createdAtRange": "名單建立日期",
   "page.salesLeadDeliveryPage.deliverAgain": "再次派發",
   "page.salesLeadDeliveryPage.deliverFailed": "名單派發失敗",
@@ -1903,6 +1905,7 @@
   "page.salesLeadDeliveryPage.expectedDeliveryAmount": "預計派發名單數",
   "page.salesLeadDeliveryPage.field": "領域",
   "page.salesLeadDeliveryPage.filterSalesLead": "篩選名單",
+  "page.salesLeadDeliveryPage.lastContactRange": "上次接通日期",
   "page.salesLeadDeliveryPage.leadLevel": "名單分級",
   "page.salesLeadDeliveryPage.marketingActivity": "行銷活動",
   "page.salesLeadDeliveryPage.nextStep": "下一步",
