--- a/src/translations/locales/en-us.json
+++ b/src/translations/locales/en-us.json
@@ -1527,6 +1527,7 @@
   "member.label.timetable": "時間表",
   "member.label.線上課程服務約款": "線上課程服務約款",
   "member.text.markAsRejection": "Mark As Rejection",
+  "member.text.memberSelect": "請輸入帳號或 Email",
   "member.text.removeMember": "The student status will be changed to Rejected and removed from the \"In Development\" list.",
   "member.ui.memberReject": "Member Rejected",
   "member.ui.switchCalendar": "Switch Calendar Mode",
@@ -2580,18 +2581,19 @@
   "sale.SaleCollectionAdminCard.removeEquity": "Remove Equity",
   "sale.SaleCollectionAdminCard.removeEquityWarning": "This operation will remove the usage rights of {productName} . Are you sure you want to remove it?",
   "sale.SaleCollectionAdminCard.updateEquitySuccessfully": "Equity Change Successfully",
+  "sales.label.answeredLeads": "已接通名單",
   "sales.label.assignedAt": "派發日期",
   "sales.label.assignedLead": "近期派發",
   "sales.label.autoStartCalls": "AutoDial",
   "sales.label.chaileaseApply": "Apply for financing",
   "sales.label.chaileaseLookup": "Sign Up Lookup",
   "sales.label.closedLead": "Closed List",
-  "sales.label.contactedLead": "ContactedLead",
+  "sales.label.contactedLead": "已撥打名單",
   "sales.label.createdAt": "Created Date",
   "sales.label.deals": "Dealed",
   "sales.label.dedicatedLead": "專屬名單",
   "sales.label.existedLead": "既有名單",
-  "sales.label.idledLead": "Uncontacted List",
+  "sales.label.idledLead": "未撥打名單",
   "sales.label.invitedLead": "InvitedLead",
   "sales.label.keepInTouch": "In Development",
   "sales.label.lastContactAt": "Last Contact Time",
@@ -2600,7 +2602,8 @@
   "sales.label.potentials": "To be developed",
   "sales.label.presentedLead": "ShowedLead",
   "sales.label.productItem": "Product Item",
-  "sales.label.recentContactedAt": "最近聯繫",
+  "sales.label.recentAnsweredAt": "最近接通",
+  "sales.label.recentContactedAt": "最近撥打",
   "sales.label.recentTaskedAt": "最近待辦",
   "sales.label.rejected": "Rejected",
   "sales.label.revoked": "Refunded",
