--- a/src/translations/locales/id.json
+++ b/src/translations/locales/id.json
@@ -1527,6 +1527,7 @@
   "member.label.timetable": "時間表",
   "member.label.線上課程服務約款": "Kontrak layanan kursus online",
   "member.text.markAsRejection": "Tandai Sebagai Penolakan",
+  "member.text.memberSelect": "請輸入帳號或 Email",
   "member.text.removeMember": "Status siswa akan diubah menjadi Ditolak dan dihapus dari daftar \"Dalam Pengembangan\".",
   "member.ui.memberReject": "Anggota Ditolak",
   "member.ui.switchCalendar": "Ganti Mode Kalender",
@@ -2580,18 +2581,19 @@
   "sale.SaleCollectionAdminCard.removeEquity": "Hapus Ekuitas",
   "sale.SaleCollectionAdminCard.removeEquityWarning": "Operasi ini akan menghapus hak penggunaan {productName} . Yakin ingin menghapusnya?",
   "sale.SaleCollectionAdminCard.updateEquitySuccessfully": "Berhasil Mengubah Ekuitas",
+  "sales.label.answeredLeads": "已接通名單",
   "sales.label.assignedAt": "派發日期",
   "sales.label.assignedLead": "近期派發",
   "sales.label.autoStartCalls": "PanggilOtomatis",
   "sales.label.chaileaseApply": "Ajukan pembiayaan",
   "sales.label.chaileaseLookup": "Pencarian Daftar",
   "sales.label.closedLead": "Daftar Tertutup",
-  "sales.label.contactedLead": "ContactedLead",
+  "sales.label.contactedLead": "已撥打名單",
   "sales.label.createdAt": "Tanggal Dibuat",
   "sales.label.deals": "Terserah",
   "sales.label.dedicatedLead": "專屬名單",
   "sales.label.existedLead": "既有名單",
-  "sales.label.idledLead": "Daftar Tidak Terhubung",
+  "sales.label.idledLead": "未撥打名單",
   "sales.label.invitedLead": "InvitedLead",
   "sales.label.keepInTouch": "Dalam Pengembangan",
   "sales.label.lastContactAt": "Waktu Kontak Terakhir",
@@ -2600,7 +2602,8 @@
   "sales.label.potentials": "Untuk dikembangkan",
   "sales.label.presentedLead": "ShowedLead",
   "sales.label.productItem": "Item Produk",
-  "sales.label.recentContactedAt": "Kontak Terbaru",
+  "sales.label.recentAnsweredAt": "最近接通",
+  "sales.label.recentContactedAt": "最近撥打",
   "sales.label.recentTaskedAt": "Baru-baru Ini Untuk Dilakukan",
   "sales.label.rejected": "Ditolak",
   "sales.label.revoked": "Dikembalikan",
