--- a/src/translations/locales/vi.json
+++ b/src/translations/locales/vi.json
@@ -1527,6 +1527,7 @@
   "member.label.timetable": "時間表",
   "member.label.線上課程服務約款": "Hợp đồng dịch vụ khóa học trực tuyến",
   "member.text.markAsRejection": " Đánh dấu là từ chối ",
+  "member.text.memberSelect": "請輸入帳號或 Email",
   "member.text.removeMember": " Trạng thái của sinh viên sẽ được thay đổi thành Bị Từ chối và bị xóa khỏi danh sách\" Đang phát triển \". ",
   "member.ui.memberReject": "Thành viên bị Từ chối ",
   "member.ui.switchCalendar": " Chuyển Chế độ Lịch ",
@@ -2580,18 +2581,19 @@
   "sale.SaleCollectionAdminCard.removeEquity": " Xóa vốn chủ sở hữu ",
   "sale.SaleCollectionAdminCard.removeEquityWarning": " Thao tác này sẽ xóa quyền sử dụng của {productName} . Bạn có chắc chắn muốn xóa không? ",
   "sale.SaleCollectionAdminCard.updateEquitySuccessfully": "Quyền và lợi ích thành công",
+  "sales.label.answeredLeads": "已接通名單",
   "sales.label.assignedAt": "派發日期",
   "sales.label.assignedLead": "近期派發",
   "sales.label.autoStartCalls": "Tự động quay số ",
   "sales.label.chaileaseApply": " Đăng ký tài trợ ",
   "sales.label.chaileaseLookup": "Đăng ký Tra cứu ",
   "sales.label.closedLead": " Danh sách đã đóng ",
-  "sales.label.contactedLead": "ContactedLead ",
+  "sales.label.contactedLead": "已撥打名單",
   "sales.label.createdAt": "Ngày thành lập",
   "sales.label.deals": "Đã giao dịch ",
   "sales.label.dedicatedLead": "專屬名單",
   "sales.label.existedLead": "既有名單",
-  "sales.label.idledLead": " Danh sách không liên hệ ",
+  "sales.label.idledLead": "未撥打名單",
   "sales.label.invitedLead": "InvitedLead ",
   "sales.label.keepInTouch": " Đang phát triển ",
   "sales.label.lastContactAt": " Lần liên hệ cuối cùng ",
@@ -2600,7 +2602,8 @@
   "sales.label.potentials": " Được phát triển ",
   "sales.label.presentedLead": "ShowedLead ",
   "sales.label.productItem": " Sản phẩm ",
-  "sales.label.recentContactedAt": "Liên hệ gần đây",
+  "sales.label.recentAnsweredAt": "最近接通",
+  "sales.label.recentContactedAt": "最近撥打",
   "sales.label.recentTaskedAt": "Gần đây để làm",
   "sales.label.rejected": " Bị từ chối ",
   "sales.label.revoked": "Đã hoàn lại ",
