feat: channel sku of program

--- a/src/translations/locales/en-us.json
+++ b/src/translations/locales/en-us.json
@@ -507,6 +507,7 @@
   "common.label.amountDollar": "{amount} dollar",
   "common.label.amountParticipants": "{amount} People",
   "common.label.anonymous": "Anonymous User",
+  "common.label.appChannel": "開放通路銷售",
   "common.label.appOwner": "Administrator",
   "common.label.assign": "Assign",
   "common.label.author": "Author",
@@ -752,6 +753,7 @@
   "common.menu.tasks": "To-Do List",
   "common.menu.tempoDelivery": "Tempo Delivery",
   "common.period.no": "No period of use",
+  "common.placeholder.enterChannelSku": "請輸入通路料號",
   "common.placeholder.enterUrlLink": "Enter URL link",
   "common.placeholder.rejectedReason": "please enter reject reason",
   "common.placeholder.useCommaToSeparateKeywords": "Use comma to separate keywords",
