--- a/src/translations/locales/id.json
+++ b/src/translations/locales/id.json
@@ -507,6 +507,7 @@
   "common.label.amountDollar": "{amount} dolar",
   "common.label.amountParticipants": "{amount} Orang",
   "common.label.anonymous": "Pengguna Anonim",
+  "common.label.appChannel": "開放通路銷售",
   "common.label.appOwner": "Administrator",
   "common.label.assign": "Tetapkan",
   "common.label.author": "Penulis",
@@ -752,6 +753,7 @@
   "common.menu.tasks": "Daftar Tugas",
   "common.menu.tempoDelivery": "Pengiriman Tempo",
   "common.period.no": "Tidak ada periode penggunaan",
+  "common.placeholder.enterChannelSku": "請輸入通路料號",
   "common.placeholder.enterUrlLink": "Masukkan tautan URL",
   "common.placeholder.rejectedReason": "please enter reject reason",
   "common.placeholder.useCommaToSeparateKeywords": "Use comma to separate keywords",
