--- a/src/translations/locales/vi.json
+++ b/src/translations/locales/vi.json
@@ -507,6 +507,7 @@
   "common.label.amountDollar": "{amount} đô la ",
   "common.label.amountParticipants": "{amount} Mọi người ",
   "common.label.anonymous": " Người dùng Ẩn danh ",
+  "common.label.appChannel": "開放通路銷售",
   "common.label.appOwner": " Quản trị viên ",
   "common.label.assign": " Chỉ định ",
   "common.label.author": " Tác giả ",
@@ -752,6 +753,7 @@
   "common.menu.tasks": " Danh sách việc cần làm ",
   "common.menu.tempoDelivery": " Giao hàng theo thời gian ",
   "common.period.no": " Không có thời gian sử dụng ",
+  "common.placeholder.enterChannelSku": "請輸入通路料號",
   "common.placeholder.enterUrlLink": " Nhập liên kết URL ",
   "common.placeholder.rejectedReason": "please enter reject reason",
   "common.placeholder.useCommaToSeparateKeywords": "Use comma to separate keywords",
