--- a/src/translations/locales/zh-cn.json
+++ b/src/translations/locales/zh-cn.json
@@ -507,6 +507,7 @@
   "common.label.amountDollar": "{amount} 元",
   "common.label.amountParticipants": "{amount} 人",
   "common.label.anonymous": "匿名使用者",
+  "common.label.appChannel": "開放通路銷售",
   "common.label.appOwner": "管理员",
   "common.label.assign": "指派",
   "common.label.author": "作者",
@@ -752,6 +753,7 @@
   "common.menu.tasks": "待办清单",
   "common.menu.tempoDelivery": "节奏交付",
   "common.period.no": "无使用期限",
+  "common.placeholder.enterChannelSku": "請輸入通路料號",
   "common.placeholder.enterUrlLink": "输入网址连结",
   "common.placeholder.rejectedReason": "please enter reject reason",
   "common.placeholder.useCommaToSeparateKeywords": "Use comma to separate keywords",
