Feature/channel SKU (#283)
* feat: channel sku of program

* fix: check duplicate channel sku

* feat: project plan channel sku

* feat: delete product channel when unchecked

* feat: check channel sku used

* feat: check channel sku used in db

* feat: new blank

* fix: map channel sku for error message

--- a/src/translations/locales/id.json
+++ b/src/translations/locales/id.json
@@ -465,6 +465,8 @@
   "common.MetaProductDeletionBlock.deleteProduct": "刪除{metaProduct}",
   "common.MetaProductDeletionBlock.deleteProductWarning": "請仔細確認是否真的要刪除{metaProduct}，因為一旦刪除就無法恢復。",
   "common.MetaProductDeletionBlock.successfullyDeleted": "Successfully deleted",
+  "common.ProductSkuModal.channelSkuDuplicated": "通路料號重複，請重新設定",
+  "common.ProductSkuModal.productChannelSkuDuplicated": "通路料號 與「{name}」重複，請重新設定",
   "common.confirmPrivatelyPublishedNotation": "將不會出現在列表，僅以私下提供連結的方式。",
   "common.confirmPrivatelyPublishedTitle": "確定要設為私密發佈？",
   "common.event.cancelSubscriptionSuccess": "Cancel SubscriptionSuccess",
@@ -507,6 +509,7 @@
   "common.label.amountDollar": "{amount} dolar",
   "common.label.amountParticipants": "{amount} Orang",
   "common.label.anonymous": "Pengguna Anonim",
+  "common.label.appChannel": "開放通路銷售",
   "common.label.appOwner": "Administrator",
   "common.label.assign": "Tetapkan",
   "common.label.author": "Penulis",
@@ -752,6 +755,7 @@
   "common.menu.tasks": "Daftar Tugas",
   "common.menu.tempoDelivery": "Pengiriman Tempo",
   "common.period.no": "Tidak ada periode penggunaan",
+  "common.placeholder.enterChannelSku": "請輸入通路料號",
   "common.placeholder.enterUrlLink": "Masukkan tautan URL",
   "common.placeholder.rejectedReason": "please enter reject reason",
   "common.placeholder.useCommaToSeparateKeywords": "Use comma to separate keywords",
