--- a/src/translations/locales/zh-cn.json
+++ b/src/translations/locales/zh-cn.json
@@ -465,6 +465,8 @@
   "common.MetaProductDeletionBlock.deleteProduct": "刪除{metaProduct}",
   "common.MetaProductDeletionBlock.deleteProductWarning": "請仔細確認是否真的要刪除{metaProduct}，因為一旦刪除就無法恢復。",
   "common.MetaProductDeletionBlock.successfullyDeleted": "Successfully deleted",
+  "common.ProductSkuModal.channelSkuDuplicated": "通路料號重複，請重新設定",
+  "common.ProductSkuModal.productChannelSkuDuplicated": "通路料號 與「{name}」重複，請重新設定",
   "common.confirmPrivatelyPublishedNotation": "將不會出現在列表，僅以私下提供連結的方式。",
   "common.confirmPrivatelyPublishedTitle": "確定要設為私密發佈？",
   "common.event.cancelSubscriptionSuccess": "取消订阅成功",
@@ -507,6 +509,7 @@
   "common.label.amountDollar": "{amount} 元",
   "common.label.amountParticipants": "{amount} 人",
   "common.label.anonymous": "匿名使用者",
+  "common.label.appChannel": "開放通路銷售",
   "common.label.appOwner": "管理员",
   "common.label.assign": "指派",
   "common.label.author": "作者",
@@ -752,6 +755,7 @@
   "common.menu.tasks": "待办清单",
   "common.menu.tempoDelivery": "节奏交付",
   "common.period.no": "无使用期限",
+  "common.placeholder.enterChannelSku": "請輸入通路料號",
   "common.placeholder.enterUrlLink": "输入网址连结",
   "common.placeholder.rejectedReason": "please enter reject reason",
   "common.placeholder.useCommaToSeparateKeywords": "Use comma to separate keywords",
