fix: modify ScopeSelector & ProductSelector

--- a/src/translations/locales/en-us.json
+++ b/src/translations/locales/en-us.json
@@ -495,6 +495,7 @@
   "common.label.allMembers": "All Members",
   "common.label.allMembershipCard": "All Membership Cards",
   "common.label.allMerchandise": "All merchandises",
+  "common.label.allMerchandiseSpec": "All merchandises spec",
   "common.label.allPodcastPlan": "All Podcast Plan",
   "common.label.allPodcastProgram": "All Podcasts",
   "common.label.allProgram": "All perpetual programs",
@@ -504,7 +505,7 @@
   "common.label.allProgramPlan": "All program plans",
   "common.label.allProjectPlan": "All Project Plan",
   "common.label.allShop": "All Shops",
-  "common.label.allVocherPlan": "All Vocher Plan",
+  "common.label.allVoucherPlan": "All Voucher Plan",
   "common.label.alreadyMember": "Already a member?",
   "common.label.amountDollar": "{amount} dollar",
   "common.label.amountParticipants": "{amount} People",
