--- a/src/translations/locales/vi.json
+++ b/src/translations/locales/vi.json
@@ -495,6 +495,7 @@
   "common.label.allMembers": "Tất cả các thành viên",
   "common.label.allMembershipCard": "Tất cả các thẻ thành viên",
   "common.label.allMerchandise": "Tất cả hàng hóa",
+  "common.label.allMerchandiseSpec": "All merchandises spec",
   "common.label.allPodcastPlan": "All Podcast Plan",
   "common.label.allPodcastProgram": " Tất cả Podcast ",
   "common.label.allProgram": "Tất cả các chương trình vĩnh viễn",
@@ -504,7 +505,7 @@
   "common.label.allProgramPlan": "Tất cả các gói chương trình",
   "common.label.allProjectPlan": "All Project Plan",
   "common.label.allShop": " Tất cả các cửa hàng ",
-  "common.label.allVocherPlan": "All Vocher Plan",
+  "common.label.allVoucherPlan": "All Voucher Plan",
   "common.label.alreadyMember": "Đã là thành viên?",
   "common.label.amountDollar": "{amount} đô la ",
   "common.label.amountParticipants": "{amount} Mọi người ",
