--- a/src/translations/locales/zh-cn.json
+++ b/src/translations/locales/zh-cn.json
@@ -489,22 +489,23 @@
   "common.label.adminBackstage": "管理后台",
   "common.label.all": "全部",
   "common.label.allActivityTicket": "所有实体活动",
-  "common.label.allAppointmentPlan": "全部預約",
+  "common.label.allAppointmentPlan": "所有預約",
   "common.label.allCouponPlan": "所有折價方案",
   "common.label.allGiftPlan": "所有贈品方案",
   "common.label.allMembers": "全部会员",
   "common.label.allMembershipCard": "所有会员卡",
   "common.label.allMerchandise": "所有商品",
-  "common.label.allPodcastPlan": "全部廣播訂閱頻道",
+  "common.label.allMerchandiseSpec": "所有商品規格",
+  "common.label.allPodcastPlan": "所有廣播訂閱頻道",
   "common.label.allPodcastProgram": "所有播客",
   "common.label.allProgram": "所有单次课程",
   "common.label.allProgramContent": "所有课程内容",
   "common.label.allProgramPackage": "所有课程组合",
   "common.label.allProgramPackagePlan": "所有课程组合方案",
   "common.label.allProgramPlan": "所有订阅方案",
-  "common.label.allProjectPlan": "全部專案",
+  "common.label.allProjectPlan": "所有專案",
   "common.label.allShop": "全部商店",
-  "common.label.allVocherPlan": "所有兌換方案",
+  "common.label.allVoucherPlan": "所有兌換方案",
   "common.label.alreadyMember": "已经是是会员吗？",
   "common.label.amountDollar": "{amount} 元",
   "common.label.amountParticipants": "{amount} 人",
