--- a/src/translations/locales/zh-tw.json
+++ b/src/translations/locales/zh-tw.json
@@ -489,22 +489,23 @@
   "common.label.adminBackstage": "管理後台",
   "common.label.all": "全部",
   "common.label.allActivityTicket": "所有活動",
-  "common.label.allAppointmentPlan": "全部預約",
+  "common.label.allAppointmentPlan": "所有預約",
   "common.label.allCouponPlan": "所有折價方案",
   "common.label.allGiftPlan": "所有贈品方案",
   "common.label.allMembers": "全部會員",
   "common.label.allMembershipCard": "所有會員卡",
   "common.label.allMerchandise": "所有商品",
-  "common.label.allPodcastPlan": "全部廣播訂閱頻道",
+  "common.label.allMerchandiseSpec": "所有商品規格",
+  "common.label.allPodcastPlan": "所有廣播訂閱頻道",
   "common.label.allPodcastProgram": "所有廣播",
   "common.label.allProgram": "所有單次課程",
   "common.label.allProgramContent": "所有課程內容",
   "common.label.allProgramPackage": "所有課程組合",
   "common.label.allProgramPackagePlan": "所有課程組合方案",
   "common.label.allProgramPlan": "所有課程方案",
-  "common.label.allProjectPlan": "全部專案",
+  "common.label.allProjectPlan": "所有專案",
   "common.label.allShop": "全部商店",
-  "common.label.allVocherPlan": "所有兌換方案",
+  "common.label.allVoucherPlan": "所有兌換方案",
   "common.label.alreadyMember": "已經是是會員嗎？",
   "common.label.amountDollar": "{amount} 元",
   "common.label.amountParticipants": "{amount} 人",
