--- a/src/translations/locales/id.json
+++ b/src/translations/locales/id.json
@@ -495,6 +495,7 @@
   "common.label.allMembers": "Semua Anggota",
   "common.label.allMembershipCard": "Semua Kartu Keanggotaan",
   "common.label.allMerchandise": "Semua merchandise",
+  "common.label.allMerchandiseSpec": "All merchandises spec",
   "common.label.allPodcastPlan": "All Podcast Plan",
   "common.label.allPodcastProgram": "Semua Podcast",
   "common.label.allProgram": "Semua program abadi",
@@ -504,7 +505,7 @@
   "common.label.allProgramPlan": "Semua rencana program",
   "common.label.allProjectPlan": "All Project Plan",
   "common.label.allShop": "Semua Toko",
-  "common.label.allVocherPlan": "All Vocher Plan",
+  "common.label.allVoucherPlan": "All Voucher Plan",
   "common.label.alreadyMember": "Sudah menjadi anggota?",
   "common.label.amountDollar": "{amount} dolar",
   "common.label.amountParticipants": "{amount} Orang",
