fix: add program plan selector in exam & practice

--- a/src/translations/locales/id.json
+++ b/src/translations/locales/id.json
@@ -1055,6 +1055,13 @@
   "craft.*.titleStyle": "Gaya Judul",
   "craft.*.variant": "Gaya Komponen",
   "craft.*.width": "lebar",
+  "craft.AIBotSettings.addQuestion": "新增問題",
+  "craft.AIBotSettings.assistantQuestions": "使用者問答",
+  "craft.AIBotSettings.assistantQuestionsPlaceholder": "What do you want to ask?",
+  "craft.AIBotSettings.setting": "基本設定",
+  "craft.AIBotSettings.style": "樣式",
+  "craft.AIBotSettings.systemPrompt": "系統提示詞",
+  "craft.AIBotSettings.systemPromptPlaceholder": "You are an expert of...",
   "craft.ActivityCollectionSettings.activitySectionId": "ID Bagian Aktivitas",
   "craft.BackgroundStyleInput.background": "Latar Belakang",
   "craft.BackgroundStyleInput.image": "Gambar",
@@ -1955,6 +1962,7 @@
   "practice.text.emptyPractice": "Belum ada tugas",
   "practice.text.searchPractice": "Cari berdasarkan judul atau nama siswa",
   "program.*.cancel": "取消",
+  "program.*.contentPlan": "Content Plan",
   "program.*.deleteContent": "刪除內容",
   "program.*.exerciseTitle": "標題",
   "program.*.fetchDataError": "讀取錯誤",
