--- a/src/translations/locales/vi.json
+++ b/src/translations/locales/vi.json
@@ -1055,6 +1055,13 @@
   "craft.*.titleStyle": " Kiểu tiêu đề ",
   "craft.*.variant": " Thành phần kiểu ",
   "craft.*.width": " width ",
+  "craft.AIBotSettings.addQuestion": "新增問題",
+  "craft.AIBotSettings.assistantQuestions": "使用者問答",
+  "craft.AIBotSettings.assistantQuestionsPlaceholder": "What do you want to ask?",
+  "craft.AIBotSettings.setting": "基本設定",
+  "craft.AIBotSettings.style": "樣式",
+  "craft.AIBotSettings.systemPrompt": "系統提示詞",
+  "craft.AIBotSettings.systemPromptPlaceholder": "You are an expert of...",
   "craft.ActivityCollectionSettings.activitySectionId": " ID Phần Hoạt động ",
   "craft.BackgroundStyleInput.background": " Nền ",
   "craft.BackgroundStyleInput.image": " Hình ảnh ",
@@ -1955,6 +1962,7 @@
   "practice.text.emptyPractice": " Chưa có bài tập nào ",
   "practice.text.searchPractice": " Tìm kiếm theo chức danh hoặc tên sinh viên ",
   "program.*.cancel": "取消",
+  "program.*.contentPlan": "Content Plan",
   "program.*.deleteContent": "刪除內容",
   "program.*.exerciseTitle": "標題",
   "program.*.fetchDataError": "讀取錯誤",
