--- a/src/translations/locales/zh-cn.json
+++ b/src/translations/locales/zh-cn.json
@@ -1055,6 +1055,13 @@
   "craft.*.titleStyle": "标题样式",
   "craft.*.variant": "元件样式",
   "craft.*.width": "宽度",
+  "craft.AIBotSettings.addQuestion": "新增問題",
+  "craft.AIBotSettings.assistantQuestions": "使用者問答",
+  "craft.AIBotSettings.assistantQuestionsPlaceholder": "What do you want to ask?",
+  "craft.AIBotSettings.setting": "基本設定",
+  "craft.AIBotSettings.style": "樣式",
+  "craft.AIBotSettings.systemPrompt": "系統提示詞",
+  "craft.AIBotSettings.systemPromptPlaceholder": "You are an expert of...",
   "craft.ActivityCollectionSettings.activitySectionId": "活动区块 ID",
   "craft.BackgroundStyleInput.background": "背景",
   "craft.BackgroundStyleInput.image": "图片",
@@ -1955,6 +1962,7 @@
   "practice.text.emptyPractice": "尚未有任何作业",
   "practice.text.searchPractice": "搜寻标题或学员名称",
   "program.*.cancel": "取消",
+  "program.*.contentPlan": "适用方案",
   "program.*.deleteContent": "刪除內容",
   "program.*.exerciseTitle": "標題",
   "program.*.fetchDataError": "讀取錯誤",
