--- a/src/translations/locales/en-us.json
+++ b/src/translations/locales/en-us.json
@@ -1055,6 +1055,13 @@
   "craft.*.titleStyle": "Title Style",
   "craft.*.variant": "Component Style",
   "craft.*.width": "width",
+  "craft.AIBotSettings.addQuestion": "新增問題",
+  "craft.AIBotSettings.assistantQuestions": "使用者問答",
+  "craft.AIBotSettings.assistantQuestionsPlaceholder": "What do you want to ask?",
+  "craft.AIBotSettings.setting": "基本設定",
+  "craft.AIBotSettings.style": "樣式",
+  "craft.AIBotSettings.systemPrompt": "系統提示詞",
+  "craft.AIBotSettings.systemPromptPlaceholder": "You are an expert of...",
   "craft.ActivityCollectionSettings.activitySectionId": "Activity Section ID",
   "craft.BackgroundStyleInput.background": "Background",
   "craft.BackgroundStyleInput.image": "Image",
@@ -1955,6 +1962,7 @@
   "practice.text.emptyPractice": "There are no assignments yet",
   "practice.text.searchPractice": "Search by title or student name",
   "program.*.cancel": "取消",
+  "program.*.contentPlan": "Content Plan",
   "program.*.deleteContent": "刪除內容",
   "program.*.exerciseTitle": "標題",
   "program.*.fetchDataError": "讀取錯誤",
