--- a/src/translations/locales/zh-tw.json
+++ b/src/translations/locales/zh-tw.json
@@ -1055,6 +1055,13 @@
   "craft.*.titleStyle": "標題樣式",
   "craft.*.variant": "元件樣式",
   "craft.*.width": "寬度",
+  "craft.AIBotSettings.addQuestion": "新增問題",
+  "craft.AIBotSettings.assistantQuestions": "使用者問答",
+  "craft.AIBotSettings.assistantQuestionsPlaceholder": "What do you want to ask?",
+  "craft.AIBotSettings.setting": "基本設定",
+  "craft.AIBotSettings.style": "樣式",
+  "craft.AIBotSettings.systemPrompt": "系統提示詞",
+  "craft.AIBotSettings.systemPromptPlaceholder": "You are an expert of...",
   "craft.ActivityCollectionSettings.activitySectionId": "活動區塊 ID",
   "craft.BackgroundStyleInput.background": "背景",
   "craft.BackgroundStyleInput.image": "圖片",
@@ -1959,6 +1966,7 @@
   "practice.text.emptyPractice": "尚未有任何作業",
   "practice.text.searchPractice": "搜尋標題或學員名稱",
   "program.*.cancel": "取消",
+  "program.*.contentPlan": "適用方案",
   "program.*.deleteContent": "刪除內容",
   "program.*.exerciseTitle": "標題",
   "program.*.fetchDataError": "讀取錯誤",
