feat: add isRequired switch in member properties

--- a/src/translations/locales/en-us.json
+++ b/src/translations/locales/en-us.json
@@ -840,6 +840,7 @@
   "common.text.ogImageTips": "Recommend image size: 1200*630px",
   "common.text.period": ",",
   "common.text.purchasedAt": "{name} purchased at {date}",
+  "common.text.required": "required",
   "common.text.resetPasswordNotation": "For security reasons, please go to the mailbox to change the password",
   "common.text.sentResetPasswordMail": "A password reset letter has been sent",
   "common.text.shortDescriptionPlaceholder": "limit in 30 characters",
@@ -1055,6 +1056,13 @@
   "craft.*.titleStyle": "Title Style",
   "craft.*.variant": "Component Style",
   "craft.*.width": "width",
+  "craft.AIBotSettings.addQuestion": "新增問題",
+  "craft.AIBotSettings.assistantQuestions": "使用者問答",
+  "craft.AIBotSettings.assistantQuestionsPlaceholder": "What do you want to ask?",
+  "craft.AIBotSettings.setting": "基本設定",
+  "craft.AIBotSettings.style": "樣式",
+  "craft.AIBotSettings.systemPrompt": "系統提示詞",
+  "craft.AIBotSettings.systemPromptPlaceholder": "You are an expert of...",
   "craft.ActivityCollectionSettings.activitySectionId": "Activity Section ID",
   "craft.BackgroundStyleInput.background": "Background",
   "craft.BackgroundStyleInput.image": "Image",
