--- a/src/translations/locales/id.json
+++ b/src/translations/locales/id.json
@@ -840,6 +840,7 @@
   "common.text.ogImageTips": "Recommend image size: 1200*630px",
   "common.text.period": ",",
   "common.text.purchasedAt": "{name} dibeli pada {date}",
+  "common.text.required": "required",
   "common.text.resetPasswordNotation": "Demi keamanan, silakan masuk ke kotak surat untuk mengubah kata sandi",
   "common.text.sentResetPasswordMail": "Surat pengaturan ulang kata sandi telah dikirim",
   "common.text.shortDescriptionPlaceholder": "batas dalam 30 karakter",
@@ -1055,6 +1056,13 @@
   "craft.*.titleStyle": "Gaya Judul",
   "craft.*.variant": "Gaya Komponen",
   "craft.*.width": "lebar",
+  "craft.AIBotSettings.addQuestion": "新增問題",
+  "craft.AIBotSettings.assistantQuestions": "使用者問答",
+  "craft.AIBotSettings.assistantQuestionsPlaceholder": "What do you want to ask?",
+  "craft.AIBotSettings.setting": "基本設定",
+  "craft.AIBotSettings.style": "樣式",
+  "craft.AIBotSettings.systemPrompt": "系統提示詞",
+  "craft.AIBotSettings.systemPromptPlaceholder": "You are an expert of...",
   "craft.ActivityCollectionSettings.activitySectionId": "ID Bagian Aktivitas",
   "craft.BackgroundStyleInput.background": "Latar Belakang",
   "craft.BackgroundStyleInput.image": "Gambar",
