--- a/src/translations/locales/vi.json
+++ b/src/translations/locales/vi.json
@@ -840,6 +840,7 @@
   "common.text.ogImageTips": "Recommend image size: 1200*630px",
   "common.text.period": " , ",
   "common.text.purchasedAt": "{name} đã mua lúc {date}",
+  "common.text.required": "required",
   "common.text.resetPasswordNotation": " Vì lý do bảo mật, vui lòng vào hộp thư để thay đổi mật khẩu ",
   "common.text.sentResetPasswordMail": "Thư đặt lại mật khẩu đã được gửi ",
   "common.text.shortDescriptionPlaceholder": "giới hạn trong 30 ký tự",
@@ -1055,6 +1056,13 @@
   "craft.*.titleStyle": " Kiểu tiêu đề ",
   "craft.*.variant": " Thành phần kiểu ",
   "craft.*.width": " width ",
+  "craft.AIBotSettings.addQuestion": "新增問題",
+  "craft.AIBotSettings.assistantQuestions": "使用者問答",
+  "craft.AIBotSettings.assistantQuestionsPlaceholder": "What do you want to ask?",
+  "craft.AIBotSettings.setting": "基本設定",
+  "craft.AIBotSettings.style": "樣式",
+  "craft.AIBotSettings.systemPrompt": "系統提示詞",
+  "craft.AIBotSettings.systemPromptPlaceholder": "You are an expert of...",
   "craft.ActivityCollectionSettings.activitySectionId": " ID Phần Hoạt động ",
   "craft.BackgroundStyleInput.background": " Nền ",
   "craft.BackgroundStyleInput.image": " Hình ảnh ",
