--- a/src/translations/locales/zh-cn.json
+++ b/src/translations/locales/zh-cn.json
@@ -840,6 +840,7 @@
   "common.text.ogImageTips": "Recommend image size: 1200*630px",
   "common.text.period": "，",
   "common.text.purchasedAt": "{name} 于 {date} 购买",
+  "common.text.required": "必填",
   "common.text.resetPasswordNotation": "为了安全考量，请至信箱收信更换密码",
   "common.text.sentResetPasswordMail": "已寄送重设密码信",
   "common.text.shortDescriptionPlaceholder": "100 字以内",
@@ -1055,6 +1056,13 @@
   "craft.*.titleStyle": "标题样式",
   "craft.*.variant": "元件样式",
   "craft.*.width": "宽度",
+  "craft.AIBotSettings.addQuestion": "新增問題",
+  "craft.AIBotSettings.assistantQuestions": "使用者問答",
+  "craft.AIBotSettings.assistantQuestionsPlaceholder": "What do you want to ask?",
+  "craft.AIBotSettings.setting": "基本設定",
+  "craft.AIBotSettings.style": "樣式",
+  "craft.AIBotSettings.systemPrompt": "系統提示詞",
+  "craft.AIBotSettings.systemPromptPlaceholder": "You are an expert of...",
   "craft.ActivityCollectionSettings.activitySectionId": "活动区块 ID",
   "craft.BackgroundStyleInput.background": "背景",
   "craft.BackgroundStyleInput.image": "图片",
