--- a/src/translations/locales/zh-tw.json
+++ b/src/translations/locales/zh-tw.json
@@ -840,6 +840,7 @@
   "common.text.ogImageTips": "建議圖片尺寸：1200*630px",
   "common.text.period": "，",
   "common.text.purchasedAt": "{name} 於 {date} 購買",
+  "common.text.required": "必填",
   "common.text.resetPasswordNotation": "為了安全考量，請至信箱收信更換密碼",
   "common.text.sentResetPasswordMail": "已寄送重設密碼信",
   "common.text.shortDescriptionPlaceholder": "100 字以內",
@@ -1055,6 +1056,13 @@
   "craft.*.titleStyle": "標題樣式",
   "craft.*.variant": "元件樣式",
   "craft.*.width": "寬度",
+  "craft.AIBotSettings.addQuestion": "新增問題",
+  "craft.AIBotSettings.assistantQuestions": "使用者問答",
+  "craft.AIBotSettings.assistantQuestionsPlaceholder": "What do you want to ask?",
+  "craft.AIBotSettings.setting": "基本設定",
+  "craft.AIBotSettings.style": "樣式",
+  "craft.AIBotSettings.systemPrompt": "系統提示詞",
+  "craft.AIBotSettings.systemPromptPlaceholder": "You are an expert of...",
   "craft.ActivityCollectionSettings.activitySectionId": "活動區塊 ID",
   "craft.BackgroundStyleInput.background": "背景",
   "craft.BackgroundStyleInput.image": "圖片",
